--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script>
         // 🔹 Traccar WebSocket Configuratie
-        const TRACCAR_SERVER = "wss://45.55.84.20/api/socket"; // WebSocket endpoint
+        const TRACCAR_SERVER = "wss://server.traccar.org/api/socket?token=RzBFAiASgPK8DzXzkjt9r_N3rULKqYELOM4V8qCOKY1megHo-QIhAKphbHEFbVPcPft7Lc6dOCB21vtSclQNTzOIL_ehRQK_eyJ1IjoyMjExLCJlIjoiMjAzMC0xMi0yNlQyMzowMDowMC4wMDArMDA6MDAifQ"; // WebSocket endpoint
         const TRACCAR_USERNAME = "reclameappie@gmail.com";
         const TRACCAR_PASSWORD = "xy3s9e6k";
         const DEVICE_ID = 7919; // Juiste device ID
