--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         // 🔹 Kaart initialiseren met Leaflet.js (Minimalistische Roadmap)
         let map = L.map('map', { zoomControl: false }).setView([52.3038209, 6.505169], 20); // 🔹 Goed ingezoomd (17)
-        L.tileLayer("https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png", {
+        L.tileLayer("https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png", {
             attribution: '',
             subdomains: 'abcd',
             minZoom: 2,
