--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         // 🔹 ECHT auto-icoon (Niet een bougie 😂)
         const carIcon = L.icon({
-            iconUrl: "https://i.postimg.cc/qgfN3Jjr/car.png", // 🚗 Auto icoon
+            iconUrl: "https://i.postimg.cc/FKFw4jNt/Pngtree-vector-car-icon-4292542-removebg-preview.png", // 🚗 Auto icoon
             iconSize: [50, 50], // Groter icoon
             iconAnchor: [25, 25] // Centered position
         });
