--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     attributionControl: false
   }).setView([0, 0], 17);
 
-  L.tileLayer("https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png", {
+  L.tileLayer("https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png", {
     subdomains: "abcd"
   }).addTo(map);
 
