--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   const map = L.map("map", {
     zoomControl: false,
     attributionControl: false
-  }).setView([0, 0], 17);
+  }).setView([52.3038209, 6.505169], 20);
 
   L.tileLayer("https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png", {
     subdomains: "abcd"
