--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   const DEVICE_ID = 441821; // ✅ Juiste device ID
   const TOKEN = "jouw_api_token"; // ⬅️ Vul hier je geldige Traccar API-token in
   const WS_URL = `wss://server.traccar.org/api/socket?token=${TOKEN}`;
-  const REST_URL = "https://server.traccar.org/api/positions`;
+  const REST_URL = "https://server.traccar.org/api/positions";
 
   let routeCoords = []; // Opslag voor routepunten
 
