--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     html, body {
       margin: 0;
       padding: 0;
+      background: #000;
     }
 
     #map-container {
@@ -16,13 +17,19 @@
       width: 100vw;
       overflow: hidden;
       position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     #map {
-      height: 100%;
-      width: 100%;
+      height: 90vmin;
+      width: 90vmin;
+      border-radius: 50%;
+      overflow: hidden;
       transform-origin: center center;
       transition: transform 0.5s ease;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
     }
 
     .leaflet-div-icon {
@@ -121,7 +128,6 @@
 
     map.setView(latLng);
 
-    // ✅ Info box updates
     document.getElementById("battery").textContent = battery + "%";
     document.getElementById("speed").textContent = (speed * 3.6).toFixed(1) + " km/u";
     document.getElementById("timestamp").textContent = new Date(lastUpdate).toLocaleTimeString();
