--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     }
 
     #map {
-      height: 90vmin;
-      width: 90vmin;
+      height: 150vmin;
+      width: 150vmin;
       border-radius: 50%;
       overflow: hidden;
       transform-origin: center center;
@@ -50,13 +50,13 @@
       border-radius: 10px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
       font-family: sans-serif;
-      font-size: 14px;
+      font-size: 36px;
       color: #000;
       z-index: 1000;
     }
     .info-box strong {
       display: inline-block;
-      width: 80px;
+      width: 280px;
     }
   </style>
 </head>
@@ -68,7 +68,7 @@
     <div><strong>Batterij:</strong> <span id="battery">--%</span></div>
     <div><strong>Snelheid:</strong> <span id="speed">-- km/u</span></div>
     <div><strong>Status:</strong> <span id="status">Onbekend</span></div>
-    <div><strong>Laatste:</strong> <span id="timestamp">--</span></div>
+    <div><strong>Laatste Update:</strong> <span id="timestamp">--</span></div>
   </div>
 </div>
 
@@ -85,9 +85,10 @@
   const map = L.map("map", {
     zoomControl: false,
     attributionControl: false
-  }).setView([52.3038209, 6.505169], 20);
+  }).setView([52.3038209, 6.505169], 30); // ← dat is perfect
+;
 
-  L.tileLayer("https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png", {
+  L.tileLayer("https://{s}.basemaps.cartocdn.com/rastertiles/voyager/{z}/{x}/{y}{r}.png", {
     subdomains: "abcd"
   }).addTo(map);
 
