--- a/index.html
+++ b/index.html
@@ -42,18 +42,21 @@
     }
 
     .info-box {
-      position: absolute;
-      top: 15px;
-      left: 15px;
-      background: rgba(255, 255, 255, 0.9);
-      padding: 10px 15px;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-      font-family: sans-serif;
-      font-size: 36px;
-      color: #000;
-      z-index: 1000;
-    }
+  position: absolute;
+  top: 15px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: rgba(255, 255, 255, 0.9);
+  padding: 10px 15px;
+  border-radius: 10px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  font-family: sans-serif;
+  font-size: 36px;
+  color: #000;
+  z-index: 1000;
+  text-align: center;
+}
+
     .info-box strong {
       display: inline-block;
       width: 280px;
