--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   }).setView([52.3038209, 6.505169], 30); // ← dat is perfect
 ;
 
-  L.tileLayer("https://{s}.basemaps.cartocdn.com/rastertiles/voyager/{z}/{x}/{y}{r}.png", {
+  L.tileLayer("https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png", {
     subdomains: "abcd"
   }).addTo(map);
 
