--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   }).addTo(map);
 
   const routeLine = L.polyline([], {
-    color: "#1c1c1c",
+    color: "#FF0000",
     weight: 4,
     opacity: 0.8
   }).addTo(map);
